[package]
name = "time_whether_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iso8601 = "0.6.1"
reqwest = "0.11.18"
serde = { version = "1.0.167", features = [ "derive" ] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["full"] }
